Update gatling tests to properly pit webclient against resttemplate

--- a/gatlingtests/src/main/resources/application.conf
+++ b/gatlingtests/src/main/resources/application.conf
@@ -1,8 +1,5 @@
 services {
-  basic {
-    baseUrl = "https://google.com"
-  }
-  query {
-    baseUrl = "https://google.com/search?q=hello"
+  api {
+    baseUrl = "http://localhost:8080/restTemplate/"
   }
 }
